syntax = "proto3";

package registry_pb;
option go_package = "github.com/parasource/rhosus/rhosus/pb/registry_pb";

message Command {
  enum CommandType {
    PING = 0;
  }
  CommandType type = 1;
  bytes data = 2;
}

message RegistryInfo {
  string uid = 1;
  string rpcAddress = 2;
  string httpAddress = 3;
  enum RegistryRole {
    REGISTRY = 0;
    BACKUP = 1;
  }
  RegistryRole role = 4;
}